==> wakwak-koba/LovyanGFX/src/lgfx/v1/platforms/samd51/common.cpp <==
#include "common.hpp"
#define _Ul(n) (static_cast<std::uint32_t>((n)))
#define PORT_PINCFG_INEN_Pos        1            /**< \brief (PORT_PINCFG) Input Enable */
#define PORT_PINCFG_INEN            (_Ul(0x1) << PORT_PINCFG_INEN_Pos)
#define PORT_PINCFG_PULLEN_Pos      2            /**< \brief (PORT_PINCFG) Pull Enable */
#define PORT_PINCFG_PULLEN          (_Ul(0x1) << PORT_PINCFG_PULLEN_Pos)

  void pinMode(std::int_fast16_t pin, pin_mode_t mode)
  {
    std::uint32_t port = pin >> samd51::PORT_SHIFT;
    pin &= samd51::PIN_MASK;
    std::uint32_t pinMask = (1ul << pin);

    // Set pin mode according to chapter '22.6.3 I/O Pin Configuration'
    switch ( mode )
    {
      case pin_mode_t::input:
        // Set pin to input mode
        PORT->Group[port].PINCFG[pin].reg=(std::uint8_t)(PORT_PINCFG_INEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;
      break ;

      case pin_mode_t::input_pullup:
        // Set pin to input mode with pull-up resistor enabled
        PORT->Group[port].PINCFG[pin].reg=(std::uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;

        // Enable pull level (cf '22.6.3.2 Input Configuration' and '22.8.7 Data Output Value Set')
        PORT->Group[port].OUTSET.reg = pinMask ;
      break ;

      case pin_mode_t::input_pulldown:
        // Set pin to input mode with pull-down resistor enabled
        PORT->Group[port].PINCFG[pin].reg=(std::uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
        PORT->Group[port].DIRCLR.reg = pinMask ;

        // Enable pull level (cf '22.6.3.2 Input Configuration' and '22.8.6 Data Output Value Clear')
        PORT->Group[port].OUTCLR.reg = pinMask ;
      break ;

      case pin_mode_t::output:
        // enable input, to support reading back values, with pullups disabled
        PORT->Group[port].PINCFG[pin].reg=(std::uint8_t)(PORT_PINCFG_INEN) ;

        // Set pin to output mode
        PORT->Group[port].DIRSET.reg = pinMask ;
      break ;

      default:
        // do nothing
      break ;
    }
  }

    bool init(int sercom_index, int pin_sclk, int pin_miso, int pin_mosi)
    {
      if ((std::size_t)sercom_index >= samd51::sercom_max) return false;

      int dopo = -1;
      {
        int pad_mosi = getPadNumber(sercom_index, pin_mosi);
        int pad_sclk = getPadNumber(sercom_index, pin_sclk);
        if (pad_sclk == 1)
        {
          if (     pad_mosi == 0) dopo = 0;
          else if (pad_mosi == 3) dopo = 2;
        }
//  Serial.printf("sercom:%d sclk:%d  mosi:%d  miso:%d \r\n", sercom_index, pin_sclk, pin_mosi, pin_miso);
//  Serial.printf("pad sclk:%d / pad mosi:%d / pad miso:%d \r\n", pad_sclk, pad_mosi, dipo);
      }
      if (dopo < 0) return false;

      int dipo = getPadNumber(sercom_index, pin_miso);
      if (dipo < 0) dipo = 0;

      auto sercom_data = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercom_data->sercomPtr);

      auto *spi = &sercom->SPI;
      while (spi->SYNCBUSY.bit.ENABLE); //Waiting then enable bit from SYNCBUSY is equal to 0;
      spi->CTRLA.bit.ENABLE = 0;        //Setting the enable bit to 0

      pinAssignSercom(pin_sclk);
      pinAssignSercom(pin_mosi);
      pinAssignSercom(pin_miso);

      resetSPI(spi);

//      std::int8_t idx = CFG::sercom_index;
//      for(std::uint8_t i=0; i<4; i++) {
//        NVIC_ClearPendingIRQ(sercom_data->irq[i]);
//        NVIC_SetPriority(sercom_data->irq[i], SERCOM_NVIC_PRIORITY);
//        NVIC_EnableIRQ(sercom_data->irq[i]);
//      }

#if defined(__SAMD51__)
auto mastermode = SERCOM_SPI_CTRLA_MODE(0x3);
#else
auto mastermode = SERCOM_SPI_CTRLA_MODE_SPI_MASTER;
#endif

      //Setting the CTRLA register
      spi->CTRLA.reg = mastermode
                     | SERCOM_SPI_CTRLA_DOPO(dopo)
                     | SERCOM_SPI_CTRLA_DIPO(dipo)
                     | MSB_FIRST << SERCOM_SPI_CTRLA_DORD_Pos;

      //Setting the CTRLB register
      spi->CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(SPI_CHAR_SIZE_8_BITS)
                      | SERCOM_SPI_CTRLB_RXEN; //Active the SPI receiver.

      while( spi->SYNCBUSY.bit.CTRLB == 1 );

      return true;
    }

    void release(int) {}

    void beginTransaction(int, int, int, int) {}

    void beginTransaction(int) {}

    bool init(int sercom_index, int pin_sda, int pin_scl)
    {
      if ((std::size_t)sercom_index >= samd51::sercom_max) return false;

      int pad_sda = getPadNumber(sercom_index, pin_sda);
      int pad_scl = getPadNumber(sercom_index, pin_scl);

// Serial.printf("sercom:%d scl:%d  sda:%d \r\n", sercom_index, pin_scl, pin_sda);
// Serial.printf("pad scl:%d / pad sda:%d \r\n", pad_scl, pad_sda);
      if (pad_sda != 0 || pad_scl != 1) return false;

      auto sercom = reinterpret_cast<Sercom*>(samd51::getSercomData(sercom_index)->sercomPtr);

      auto *i2c = &sercom->I2CM;
      while (i2c->SYNCBUSY.bit.ENABLE); //Waiting then enable bit from SYNCBUSY is equal to 0;
      i2c->CTRLA.bit.ENABLE = 0;        //Setting the enable bit to 0

      pinAssignSercom(pin_scl);
      pinAssignSercom(pin_sda);

      return true;
    }

    void release(int sercom_index)
    {
      auto sercom = reinterpret_cast<Sercom*>(samd51::getSercomData(sercom_index)->sercomPtr);
      sercom->I2CM.CTRLA.bit.ENABLE = 0;
      while ( sercom->I2CM.SYNCBUSY.bit.ENABLE != 0 );
    }

    void beginTransaction(int sercom_index, int i2c_addr, std::uint32_t freq, bool read)
    {
      auto sercomData = samd51::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);


  // Initialize the peripheral clock and interruption
#if defined(__SAMD51__)

      for (std::size_t i = 0; i < 4; ++i) {
        NVIC_ClearPendingIRQ(sercomData->irq[i]);
        NVIC_SetPriority(sercomData->irq[i], SERCOM_NVIC_PRIORITY);
        NVIC_EnableIRQ(sercomData->irq[i]);
      }

#endif // end !SAMD51



      sercom->I2CM.CTRLA.bit.SWRST = 1;
      while (sercom->I2CM.CTRLA.bit.SWRST || sercom->I2CM.SYNCBUSY.bit.SWRST);


  // Set master mode and enable SCL Clock Stretch mode (stretch after ACK bit)
      sercom->I2CM.CTRLA.reg =  SERCOM_I2CM_CTRLA_MODE( I2C_MASTER_OPERATION )/* |
                                SERCOM_I2CM_CTRLA_SCLSM*/ ;

  // Enable Smart mode and Quick Command
  //sercom->I2CM.CTRLB.reg =  SERCOM_I2CM_CTRLB_SMEN /*| SERCOM_I2CM_CTRLB_QCEN*/ ;


  // Enable all interrupts
//  sercom->I2CM.INTENSET.reg = SERCOM_I2CM_INTENSET_MB | SERCOM_I2CM_INTENSET_SB | SERCOM_I2CM_INTENSET_ERROR ;

  // Synchronous arithmetic baudrate
#if defined(__SAMD51__)
      sercom->I2CM.BAUD.bit.BAUD = SERCOM_FREQ_REF / ( 2 * freq ) - 1 ;
#else
      sercom->I2CM.BAUD.bit.BAUD = SystemCoreClock / ( 2 * baudrate) - 5 - (((SystemCoreClock / 1000000) * WIRE_RISE_TIME_NANOSECONDS) / (2 * 1000));
#endif


      sercom->I2CM.CTRLA.bit.ENABLE = 1 ;
      while ( sercom->I2CM.SYNCBUSY.bit.ENABLE != 0 );

      sercom->I2CM.STATUS.bit.BUSSTATE = 1 ;
      while ( sercom->I2CM.SYNCBUSY.bit.SYSOP != 0 );

// ---------------------

      // Wait idle or owner bus mode
      while ( sercom->I2CM.STATUS.bit.BUSSTATE != WIRE_IDLE_STATE
           && sercom->I2CM.STATUS.bit.BUSSTATE != WIRE_OWNER_STATE);

      // Send start and address
      sercom->I2CM.ADDR.bit.ADDR = i2c_addr << 1 | read;
    }
